Fix gap causing overflow - Until now, I thought padding was the culprit for causing overflow.    This forced me to do some funk maths to get grid row track height to    a specific value. Turns out this math only worked out of coincidence    because both gap and padding were the same value. So, varables have    been added and existing ones updated for the correct calculation. - Now we can add bigger chin and forehead via padding without concern

--- a/css/index.css
+++ b/css/index.css
@@ -236,14 +236,16 @@ svg {
 .content {
    --content-padding: 1rem;
    --num-rows: 2;
-   --row-height: calc(50% - calc(var(--content-padding) / var(--num-rows)));
+   --row-gap: 1.5rem;
+   --col-gap: 1rem;
+   --row-height: calc(50% - calc(var(--row-gap) / var(--num-rows)));
 
    display: grid;
    grid-template: repeat(var(--num-rows), var(--row-height)) / 3fr minmax(230px, 1fr);
    grid-template-areas: 
    "projects announcements"
    "projects trending";
-   gap: 1.5rem 1rem;
+   gap: var(--row-gap) var(--col-gap);
 
    padding: var(--content-padding);
    background-color: #E2E8F0;
